--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -517,3 +517,4 @@
 \newcommand{\filler}{\hspace{0.9\textwidth}}
 \newcommand{\tighten}{\vspace{-1ex}}
 \newcommand{\permb}[2]{\left\{{#1}\leftrightsquigarrow{#2}\right\}}
+\newcommand{\tpcp}{\tpvdash_{cp}}
