--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,53 +1,52 @@
 @inproceedings{Tov:2011,
  author = {Tov, Jesse A. and Pucella, Riccardo},
  title = {Practical Affine Types},
- booktitle = {Proceedings of the 38th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ booktitle = {Proceedings of the 38th Annual ACM SIGPLAN-SIGACT Symposium on
+                  Principles of Programming Languages},
  series = {POPL '11},
  year = {2011},
- isbn = {978-1-4503-0490-0},
  location = {Austin, Texas, USA},
  pages = {447--458},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/1926385.1926436},
- doi = {10.1145/1926385.1926436},
  acmid = {1926436},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {affine types, linear logic, modules, polymorphism, type systems},
 }
 @inproceedings{Aldrich:2009,
- author = {Aldrich, Jonathan and Sunshine, Joshua and Saini, Darpan and Sparks, Zachary},
+ author = {Aldrich, Jonathan and Sunshine, Joshua and Saini, Darpan and
+                  Sparks, Zachary},
  title = {Typestate-oriented Programming},
- booktitle = {Proceedings of the 24th ACM SIGPLAN Conference Companion on Object Oriented Programming Systems Languages and Applications},
+ booktitle = {Proceedings of the 24th ACM SIGPLAN Conference Companion on
+                  Object Oriented Programming Systems Languages and
+                  Applications},
  series = {OOPSLA '09},
  year = {2009},
- isbn = {978-1-60558-768-4},
  location = {Orlando, Florida, USA},
  pages = {1015--1022},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/1639950.1640073},
- doi = {10.1145/1639950.1640073},
  acmid = {1640073},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {objects, paradigms, permissions, programming language, states, types, typestate},
+ keywords = {objects, paradigms, permissions, programming language, states,
+                  types, typestate},
 }
 @inproceedings{Gay:2010:MST,
- author = {Gay, Simon J. and Vasconcelos, Vasco T. and Ravara, Ant\'{o}nio and Gesbert, Nils and Caldeira, Alexandre Z.},
+ author = {Gay, Simon J. and Vasconcelos, Vasco T. and Ravara, Ant\'{o}nio and
+                  Gesbert, Nils and Caldeira, Alexandre Z.},
  title = {Modular Session Types for Distributed Object-oriented Programming},
- booktitle = {Proceedings of the 37th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ booktitle = {Proceedings of the 37th Annual ACM SIGPLAN-SIGACT Symposium on
+                  Principles of Programming Languages},
  series = {POPL '10},
  year = {2010},
- isbn = {978-1-60558-479-9},
  location = {Madrid, Spain},
  pages = {299--312},
  numpages = {14},
- url = {http://doi.acm.org/10.1145/1706299.1706335},
- doi = {10.1145/1706299.1706335},
  acmid = {1706335},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {non-uniform method availability, object-oriented calculus, session types, typestates},
+ keywords = {non-uniform method availability, object-oriented calculus,
+                  session types, typestates},
 }
 @article{Vasconcelos:2006:TCM,
  author = {Vasconcelos, Vasco T. and Gay, Simon J. and Ravara, Ant\'{o}nio},
@@ -58,15 +57,13 @@
  number = {1-2},
  month = dec,
  year = {2006},
- issn = {0304-3975},
  pages = {64--87},
  numpages = {24},
- url = {http://dx.doi.org/10.1016/j.tcs.2006.06.028},
- doi = {10.1016/j.tcs.2006.06.028},
  acmid = {1222022},
  publisher = {Elsevier Science Publishers Ltd.},
  address = {Essex, UK},
- keywords = {Concurrent programming, Session types, Specification of communication protocols, Static type checking},
+ keywords = {Concurrent programming, Session types, Specification of
+                  communication protocols, Static type checking},
 }
 @techreport{Barber:1996,
  author = {Barber, Andrew},
@@ -80,7 +77,6 @@
  author = {Sangiorgi, Davide and Walker, David},
  title = {The $\pi$-calculus: A Theory of Mobile Processes},
  year = {2001},
- isbn = {0521781779},
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 } 
@@ -92,10 +88,8 @@
               Proving in Higher Order Logics},
  series = {TPHOLs '01},
  year = {2001},
- isbn = {3-540-42525-X},
  pages = {217--232},
  numpages = {16},
- url = {http://dl.acm.org/citation.cfm?id=646528.695050},
  acmid = {695050},
  publisher = {Springer-Verlag},
  address = {London, UK, UK},
@@ -109,11 +103,8 @@
  number = {1},
  month = jan,
  year = {2010},
- issn = {0956-7968},
  pages = {19--50},
  numpages = {32},
- url = {http://dx.doi.org/10.1017/S0956796809990268},
- doi = {10.1017/S0956796809990268},
  acmid = {1735541},
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
@@ -137,12 +128,9 @@
                   Languages and Systems},
  series = {ESOP'12},
  year = {2012},
- isbn = {978-3-642-28868-5},
  location = {Tallinn, Estonia},
  pages = {436--455},
  numpages = {20},
- url = {http://dx.doi.org/10.1007/978-3-642-28869-2_22},
- doi = {10.1007/978-3-642-28869-2_22},
  acmid = {2259270},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
@@ -158,11 +146,8 @@ volume = {24},
 issue = {Special Issue 2-3},
 month = {5},
 year = {2014},
-issn = {1469-7653},
 pages = {384--418},
 numpages = {35},
-doi = {10.1017/S095679681400001X},
-URL = {http://journals.cambridge.org/article_S095679681400001X},
 }
 @inproceedings{Mazurak:2010:LCC,
  author = {Mazurak, Karl and Zdancewic, Steve},
@@ -172,12 +157,9 @@ Curry-howard and Control},
 Functional Programming},
  series = {ICFP '10},
  year = {2010},
- isbn = {978-1-60558-794-3},
  location = {Baltimore, Maryland, USA},
  pages = {39--50},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/1863543.1863551},
- doi = {10.1145/1863543.1863551},
  acmid = {1863551},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -186,15 +168,13 @@ Functional Programming},
 @inproceedings{Mazurak:2010:LLT,
  author = {Mazurak, Karl and Zhao, Jianzhou and Zdancewic, Steve},
  title = {Lightweight Linear Types in System F${}^\circ$},
- booktitle = {Proceedings of the 5th ACM SIGPLAN Workshop on Types in Language Design and Implementation},
+ booktitle = {Proceedings of the 5th ACM SIGPLAN Workshop on Types in Language
+                  Design and Implementation},
  series = {TLDI '10},
  year = {2010},
- isbn = {978-1-60558-891-9},
  location = {Madrid, Spain},
  pages = {77--88},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/1708016.1708027},
- doi = {10.1145/1708016.1708027},
  acmid = {1708027},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -205,13 +185,13 @@ Functional Programming},
  advisor = {Zdancewic, Steve},
  title = {Linear types, protocols, and processes in classical F${}^\circ$},
  year = {2013},
- isbn = {978-1-303-39648-9},
  note = {AAI3594830},
  publisher = {University of Pennsylvania},
  address = {Philadelphia, PA, USA},
 } 
 @article{Benton:2012:STT,
- author = {Benton, Nick and Hur, Chung-Kil and Kennedy, Andrew J. and McBride, Conor},
+ author = {Benton, Nick and Hur, Chung-Kil and Kennedy, Andrew J. and McBride,
+                  Conor},
  title = {Strongly Typed Term Representations in Coq},
  journal = {J. Autom. Reason.},
  issue_date = {August    2012},
@@ -219,28 +199,27 @@ Functional Programming},
  number = {2},
  month = aug,
  year = {2012},
- issn = {0168-7433},
  pages = {141--159},
  numpages = {19},
- url = {http://dx.doi.org/10.1007/s10817-011-9219-0},
- doi = {10.1007/s10817-011-9219-0},
  acmid = {2339503},
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
- keywords = {The Coq proof assistant, Typed object languages, de Bruijn indices},
+ keywords = {The Coq proof assistant, Typed object languages, de Bruijn
+                  indices},
 }
 @inproceedings{Aydemir:2005:MMM,
- author = {Aydemir, Brian E. and Bohannon, Aaron and Fairbairn, Matthew and Foster, J. Nathan and Pierce, Benjamin C. and Sewell, Peter and Vytiniotis, Dimitrios and Washburn, Geoffrey and Weirich, Stephanie and Zdancewic, Steve},
+ author = {Aydemir, Brian E. and Bohannon, Aaron and Fairbairn, Matthew and
+                  Foster, J. Nathan and Pierce, Benjamin C. and Sewell, Peter
+                  and Vytiniotis, Dimitrios and Washburn, Geoffrey and
+                  Weirich, Stephanie and Zdancewic, Steve},
  title = {Mechanized Metatheory for the Masses: The PoplMark Challenge},
- booktitle = {Proceedings of the 18th International Conference on Theorem Proving in Higher Order Logics},
+ booktitle = {Proceedings of the 18th International Conference on Theorem
+                  Proving in Higher Order Logics},
  series = {TPHOLs'05},
  year = {2005},
- isbn = {3-540-28372-2, 978-3-540-28372-0},
  location = {Oxford, UK},
  pages = {50--65},
  numpages = {16},
- url = {http://dx.doi.org/10.1007/11541868_4},
- doi = {10.1007/11541868_4},
  acmid = {2145062},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
@@ -249,12 +228,9 @@ Functional Programming},
 author={Chargu{\'e}raud, Arthur},
 title={The Locally Nameless Representation},
 year={2012},
-issn={0168-7433},
 journal={Journal of Automated Reasoning},
 volume={49},
 number={3},
-doi={10.1007/s10817-011-9225-2},
-url={http://dx.doi.org/10.1007/s10817-011-9225-2},
 publisher={Springer Netherlands},
 keywords={Locally nameless; Cofinite quantification; Formal proofs; Binders;
                   Metatheory},
@@ -262,17 +238,16 @@ pages={363-408},
 language={English}
 }
 @inproceedings{Aydemir:2008:EFM,
- author = {Aydemir, Brian and Chargu{\'e}raud, Arthur and Pierce, Benjamin C. and Pollack, Randy and Weirich, Stephanie},
+ author = {Aydemir, Brian and Chargu{\'e}raud, Arthur and Pierce, Benjamin
+                  C. and Pollack, Randy and Weirich, Stephanie},
  title = {Engineering Formal Metatheory},
- booktitle = {Proceedings of the 35th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ booktitle = {Proceedings of the 35th Annual ACM SIGPLAN-SIGACT Symposium on
+                  Principles of Programming Languages},
  series = {POPL '08},
  year = {2008},
- isbn = {978-1-59593-689-9},
  location = {San Francisco, California, USA},
  pages = {3--15},
  numpages = {13},
- url = {http://doi.acm.org/10.1145/1328438.1328443},
- doi = {10.1145/1328438.1328443},
  acmid = {1328443},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -284,7 +259,6 @@ language={English}
   organization = {INRIA},
   note =         {Version 8.4pl4},
   year =         {2014},
-  url =          {https://coq.inria.fr/distrib/8.4pl4/refman/}
 }
 @article{Park:2014:MMW,
  author = {Park, Jonghyun and Seo, Jeongbong and Park, Sungwoo and Lee, Gyesik},
@@ -295,11 +269,8 @@ language={English}
  number = {2},
  month = feb,
  year = {2014},
- issn = {0168-7433},
  pages = {215--239},
  numpages = {25},
- url = {http://dx.doi.org/10.1007/s10817-013-9287-4},
- doi = {10.1007/s10817-013-9287-4},
  acmid = {2582734},
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
@@ -308,14 +279,13 @@ language={English}
 @inproceedings{Caires:2010:STI,
  author = {Caires, Lu\'{\i}s and Pfenning, Frank},
  title = {Session Types As Intuitionistic Linear Propositions},
- booktitle = {Proceedings of the 21st International Conference on Concurrency Theory},
+ booktitle = {Proceedings of the 21st International Conference on Concurrency
+                  Theory},
  series = {CONCUR'10},
  year = {2010},
- isbn = {3-642-15374-7, 978-3-642-15374-7},
  location = {Paris, France},
  pages = {222--236},
  numpages = {15},
- url = {http://dl.acm.org/citation.cfm?id=1887654.1887670},
  acmid = {1887670},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
@@ -336,26 +306,26 @@ language={English}
 }
 @inproceedings{Fahndrich:2002,
  author = {F\"{a}hndrich, Manuel and DeLine, Robert},
- title = {Adoption and Focus: Practical Linear Types for Imperative Programming},
- booktitle = {Proceedings of the ACM SIGPLAN 2002 Conference on Programming Language Design and Implementation},
+ title = {Adoption and Focus: Practical Linear Types for Imperative
+                  Programming},
+ booktitle = {Proceedings of the ACM SIGPLAN 2002 Conference on Programming
+                  Language Design and Implementation},
  series = {PLDI '02},
  year = {2002},
- isbn = {1-58113-463-0},
  location = {Berlin, Germany},
  pages = {13--24},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/512529.512532},
- doi = {10.1145/512529.512532},
  acmid = {512532},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {heap aliasing, linear types, region-based memory management},
 }
 @article{Goto:2014,
- author = {Goto,Matthew and Jagadeesan,Radha and Jeffrey,Alan and Pitcher,Corin 
-and Riely,James},
+ author = {Goto,Matthew and Jagadeesan,Radha and Jeffrey,Alan and
+                  Pitcher,Corin and Riely,James},
  title = {An Extensible Approach to Session Polymorphism},
- journal = {Mathematical Structures in Computer Science, Special Issue on Behavioural Types},
+ journal = {Mathematical Structures in Computer Science, Special Issue on
+                  Behavioural Types},
  year = {2014},
  note = {To appear.},
 }
@@ -368,11 +338,8 @@ and Riely,James},
  number = {2},
  month = nov,
  year = {2005},
- issn = {0001-5903},
  pages = {191--225},
  numpages = {35},
- url = {http://dx.doi.org/10.1007/s00236-005-0177-z},
- doi = {10.1007/s00236-005-0177-z},
  acmid = {1104646},
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
@@ -380,14 +347,13 @@ and Riely,James},
 @inproceedings{Delahaye:2000:TLS,
  author = {Delahaye, David},
  title = {A Tactic Language for the System Coq},
- booktitle = {Proceedings of the 7th International Conference on Logic for Programming and Automated Reasoning},
+ booktitle = {Proceedings of the 7th International Conference on Logic for
+                  Programming and Automated Reasoning},
  series = {LPAR'00},
  year = {2000},
- isbn = {3-540-41285-9},
  location = {Reunion Island, France},
  pages = {85--95},
  numpages = {11},
- url = {http://dl.acm.org/citation.cfm?id=1765236.1765246},
  acmid = {1765246},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
@@ -395,17 +361,16 @@ and Riely,James},
 @inproceedings{Chlipala:2008:PHOAS,
  author = {Chlipala, Adam},
  title = {Parametric Higher-order Abstract Syntax for Mechanized Semantics},
- booktitle = {Proceedings of the 13th ACM SIGPLAN International Conference on Functional Programming},
+ booktitle = {Proceedings of the 13th ACM SIGPLAN International Conference on
+                  Functional Programming},
  series = {ICFP '08},
  year = {2008},
- isbn = {978-1-59593-919-7},
  location = {Victoria, BC, Canada},
  pages = {143--156},
  numpages = {14},
- url = {http://doi.acm.org/10.1145/1411204.1411226},
- doi = {10.1145/1411204.1411226},
  acmid = {1411226},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {compiler verification, dependent types, interactive proof assistants, type-theoretic semantics},
+ keywords = {compiler verification, dependent types, interactive proof
+                  assistants, type-theoretic semantics},
 }
