--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,7 +1,7 @@
 \documentclass{mpaper}
 
 \usepackage{comment}
-\usepackage{lstform}
+\usepackage{lstmacros}
 \usepackage{graphicx}
 \usepackage{xspace}
 \usepackage{cmll}
@@ -41,7 +41,7 @@
 \input{conclusion}
 \input{acknowledgements}
 
-\sloppy
+%\sloppy
 \printbibliography
 
 \end{document}
