--- a/paper/principalcp.tex
+++ b/paper/principalcp.tex
@@ -1,274 +1,11 @@
-\begin{figure*}
-\[\colored
-\begin{array}{c}
-\multicolumn{1}{l}{(\Ax\Cut)} \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-    }{Ax}{
-      \tm{w \link x} \tpvdash \tp{\tmof{w}\dualbt{A} \comma \tmof{x}A}
-    }
-    &
-    \tm{P} \tpvdash \tp{\Gamma \comma \tmof{x}\dualbt{A}}
-  }{Cut}{
-   \tm{\nu x \Of{A}.(w \link x \mid P)} \tpvdash
-     \tp{\Gamma \comma \tmof{w}\dualbt{A}}
- }
-}
-\quad \becomes \quad
-\tm{P\sub{w/x}} \tpvdash  \tp{\Gamma \comma \tmof{w}A^\bot}
-\\
-\multicolumn{1}{l}{(\beta_{\otimes\parr})}\filler \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-      \tm{P} \tpvdash \tp{\Gamma \comma \tmof{y}A}
-      &
-      \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}B}
-    }{\otimes}{
-      \tm{x[y].(P \mid Q)} \tpvdash
-        \tp{\Gamma \comma \Delta \comma \tmof{x}A \otimes B}
-    } 
-    &
-    \inference{
-      \tm{R} \tpvdash
-        \tp{\Theta \comma \tmof{y}\dual{A} \comma \tmof{x}\dualbt{B}}
-    }{\parr}{
-      \tm{x(y).R} \tpvdash
-        \tp{\Theta \comma \tmof{x}\dual{A} \parr \dualbt{B}}
-    } 
-  }{Cut}{
-    \tm{\nu x\Of{A \otimes B}.(x[y].(P \mid Q) \mid x(y).R)} \tpvdash
-      \tp{\Gamma \comma \Delta \comma \Theta}
-  }
-}  \quad \becomes \hfill
-\\
-\hfill
-\vcenter{
-  \inference{
-      \tm{P} \tpvdash \tp{\Gamma \comma \tmof{y}A}
-      &
-      \inference{
-        \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}B}
-        &
-        \tm{R} \tpvdash
-          \tp{\Theta \comma \tmof{y}\dual{A} \comma \tmof{x}\dualbt{B}}
-      }{Cut}{
-        \tm{\nu x \Of{B}.(Q \mid R)} \tpvdash
-          \tp{\Delta \comma \Theta \comma \tmof{y}\dualbt{A}}
-      }
-    }{Cut}{
-      \tm{\nu y \Of{A}.(P \mid \nu x.(Q \mid R))} \tpvdash
-         \tp{\Gamma \comma \Delta \comma \Theta}
-    }
-  }
-\\
-\multicolumn{1}{l}{(\beta_{\oplus\with})} \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-      \tm{P} \tpvdash \tp{\Gamma \comma \tmof{x}A}
-    }{\oplus_1}{
-      \tm{x[\inlterm].P} \tpvdash \tp{\Gamma \comma \tmof{x}A \oplus B}
-    } 
-    &
-    \inference{
-      \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}\dualbt{A}}
-      &
-      \tm{R} \tpvdash \tp{\Delta \comma \tmof{x}\dualbt{B}}
-    }{\with}{
-      \tm{x.\caseterm(Q,R)} \tpvdash
-        \tp{\Delta \comma \tmof{x}\dual{A} \with \dualbt{B}}
-    } 
-  }{Cut}{
-    \tm{\nu x \Of{A \oplus B}.(x[\inlterm].P \mid x.\caseterm(Q,R))}
-      \tpvdash \tp{\Gamma \comma \Delta}
-  }
-}
-\quad \becomes \hfill
-\\
-\hfill
-\vcenter{
-  \inference{
-    \tm{P} \tpvdash \tp{\Gamma \comma \tmof{x}A}
-    &
-    \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}\dualbt{A}}
-  }{Cut}{
-    \tm{\nu x \Of{A}.(P \mid Q)} \tpvdash \tp{\Gamma \comma \Delta}
-  }
-}
-\\
-\multicolumn{1}{l}{(\beta_{!?})} \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-      \tm{P} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}
-    }{!}{
-      \tm{!x(y).P} \tpvdash \tp{{?\Gamma} \comma \tmof{x}{!A}}
-    }
-    &
-    \inference{
-      \tm{Q} \tpvdash \tp{\Delta \comma \tmof{y}\dualbt{A}}
-    }{?}{
-      \tm{?x[y].Q} \tpvdash \tp{\Delta \comma \tmof{x}{?\dualbt{A}}}
-    }
-  }{Cut}{
-    \tm{\nu x \Of{!A}.(!x(y).P \mid {?x[y].Q})} \tpvdash
-      \tp{{?\Gamma} \comma \Delta}
-  }
-}
-\quad \becomes \quad
-\vcenter{
-  \inference{
-    \tm{P} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}
-    &
-    \tm{Q} \tpvdash \tp{\Delta \comma \tmof{y}\dualbt{A}}
-  }{Cut}{
-    \tm{\nu y\Of{A}.(P \mid Q)} \tpvdash \tp{{?\Gamma} \comma \Delta}
-  }
-}
-\\~\\
-\multicolumn{1}{l}{(\beta_{!W})} \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-      \tm{P} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}
-    }{!}{
-      \tm{!x(y).P} \tpvdash \tp{{?\Gamma} \comma \tmof{x}{!A}}
-    }
-    &
-    \inference{
-      \tm{Q} \tpvdash \tp{\Delta}
-    }{Weaken}{
-      \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}{?\dualbt{A}}}
-    }
-  }{Cut}{
-    \tm{\nu x\Of{!A}.(!x(y).P \mid Q)} \tpvdash \tp{{?\Gamma} \comma \Delta}
-  }
-}
-\quad \becomes \quad
-\vcenter{
-  \Inference{
-    \tm{Q} \tpvdash \tp{\Delta}
-  }{Weaken}{
-    \tm{Q} \tpvdash \tp{{?\Gamma} \comma \Delta}
-  }
-}
-\\~\\
-\multicolumn{1}{l}{(\beta_{!C})} \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-      \tm{P} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}
-    }{!}{
-      \tm{!x(y).P} \tpvdash \tp{{?\Gamma} \comma \tmof{x}{!A}}
-    }
-    &
-    \inference{
-      \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}{?A} \comma \tmof{x'}{?A}}
-    }{Contract}{
-      \tm{Q\sub{x/x'}} \tpvdash \tp{\Delta \comma \tmof{x}{?A}}
-    }
-  }{Cut}{
-    \tm{\nu x\Of{!A}.(!x(y).P \mid Q\sub{x/x'})} \tpvdash
-      \tp{{?\Gamma} \comma \Delta}
-  }
-} \quad \becomes \hfill
-\\
-\hfill
-\vcenter{
-  \Inference{
-    \inference{
-      \inference{
-        \tm{P} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}
-      }{!}{
-        \tm{!x(y).P} \tpvdash \tp{{?\Gamma} \comma \tmof{x}{!A}}
-      }
-      &
-      \inference{
-        \inference{
-          \tm{P'} \tpvdash \tp{{?\Gamma'} \comma \tmof{y'}A}
-        }{!}{
-          \tm{!x'(y').P'} \tpvdash \tp{{?\Gamma'} \comma \tmof{x'}{!A}}
-        }
-        &
-        \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}{?\dualbt{A}}
-                                  \comma \tmof{x'}{?\dualbt{A}}}
-      }{Cut}{
-        \tm{\nu x'\Of{!A}.(!x'(y').P' \mid Q)}
-          \tpvdash \tp{{?\Gamma'} \comma \Delta \comma \tmof{x}{?\dualbt{A}}}
-      }
-    }{Cut}{
-      \tm{\nu x\Of{!A}.(!x(y).P \mid \nu x'\Of{!A}.(!x'(y').P' \mid Q))}
-        \tpvdash \tp{{?\Gamma} \comma {?\Gamma'} \comma \Delta}
-    }
-  }{Contract}{
-    \tm{\nu x\Of{!A}.(!x(y).P \mid \nu x'\Of{!A}.(!x'(y).P \mid Q))}
-      \tpvdash \tp{{?\Gamma} \comma \Delta}
-  }
-}
-\\
-\multicolumn{1}{l}{(\beta_{\exists\forall})} \\ % [-3ex]
-% \spacer
-\vcenter{
-  \inference{
-    \inference{
-      \tm{P} \tpvdash \tp{\Gamma \comma \tmof{x}B\sub{A/X}}
-    }{\exists}{
-      \tm{x[A].P} \tpvdash \tp{\Gamma \comma \tmof{x}\any{X}B}
-    } 
-    &
-    \inference{
-      \tm{Q} \tpvdash \tp{\Delta \comma \tmof{x}\dualbt{B}}
-    }{\forall}{
-      \tm{x(X).Q} \tpvdash \tp{\Delta \comma \tmof{x}\all{X}\dualbt{B}}
-    } 
-  }{Cut}{
-   \tm{\nu x \Of{\any{X}B}.(x[A].P \mid x(X).Q)} \tpvdash
-     \tp{\Gamma \comma \Delta}
-  }
-} \quad \becomes \hfill
-\\
-\hfill
-\vcenter{
-  \inference{
-    \tm{P} \tpvdash \tp{\Gamma \comma \tmof{x}B\sub{A/X}}
-    &
-    \tm{Q\sub{A/X}} \tpvdash \tp{\Delta \comma \tmof{x}\dualbt{B}\sub{A/X}}
-  }{Cut}{
-    \tm{\nu x \Of{B\sub{A/X}}.(P \mid Q\sub{A/X})} \tpvdash
-      \tp{\Gamma \comma \Delta}
-  }
-}
-\\
-\multicolumn{1}{l}{(\beta_{1\bot})} \\ % [-3ex]
-% \spacer
-\vcenter{\inference{
-  \inference{}{1}{
-    \tm{x[\,].0} \tpvdash \tp{\tmof{x}1}
-  }
-  &
-  \inference{
-    \tm{P} \tpvdash \tp{\Gamma}
-  }{\bot}{
-    \tm{x().P} \tpvdash \tp{\Gamma \comma \tmof{x}\bot}
-  } 
-}{Cut}{
-  \tm{\nu x\Of{1}.(x[\,].0 \mid x().P)} \tpvdash \tp{\Gamma}
-}}
-\quad \becomes \quad
-\tm{P} \tpvdash \tp{\Gamma}
-\\~\\
-\multicolumn{1}{l}{(\beta_{0\top})} \\% [-3ex]
-% \spacer
-\textrm{(no rule for $0$ with $\top$)}
-\end{array}\]
-\caption{Principal cut reductions for CP}
+\begin{figure}
+\begin{coq}
+Lemma reduce_spawn:
+  forall P Q A dA $\Gamma$
+         (DUA: dual_props A dA)
+         (WT: $\nu$ !A.(!0(A).P $\mid$ ?0[dA].Q $\tpcp$ $\Gamma$),
+    $\nu$ A.(P $\mid$ Q) $\tpcp$ $\Gamma$.
+\end{coq}
+\caption{Principal cut reductions for server accept and client request.}
 \label{fig:principal}
-\end{figure*}
+\end{figure}
