--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,11 +1,10 @@
 \documentclass{mprop}
 
 % Include Coq lstlisting language definition and things upon which it depends.
-\usepackage{macros}
+\usepackage{lstmacros}
 \usepackage{hyperref}
 
 \usepackage{listings}
-\usepackage{lstcoq}
 \usepackage{graphicx}
 \usepackage{xspace}
 \usepackage{cmll}
