--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -115,23 +115,28 @@ FIGURES
 equivalences and axiomatic cut
 \end{comment}
 
-% Description of the typing rules...
-
-Figure~\ref{fig:cll} presents the process calculus CP in LNCQ form with some
-tedious details relating to environment uniqueness elided. In other words,
-bound variables are represented using de Bruijn indices and free variables are
-represented using an abstract type provided by the Metatheory library. The
-rules with binders reflect this by specifying the type of a bound variable in
-the constructor rather than a name. Cofinite quantification is performed in
-the hypotheses to these rules by excluding a finite set of names from opening
-the subprocesses where opening a process $P$ with name $x$ is denoted
-$P^x$. Note that the rules for polymorphism, $\exists$ and $\forall$, were not
-included in the final Coq development since GV (\S~\ref{sec:gv}) does not
-support polymorphism making the rules unnecessary for the
-translation. Further, as noted by \citeauthor{Lee:2012}, support for
-polymorphism in type variables creates an explosion of the infrastructure
-requiring additional of opening and substituting definitions and lemmas. They
-appear in the Figure simply for the sake of completeness.
+Figure~\ref{fig:cll} presents the well-typed process relation for CP as an
+inductive type in Coq. Each typing rule in CP is represented as a constructor
+of the inductive type \coqe$cp_rule$. The inductive type is indexed by a
+process (\coqe$proc$) and an environment (\coqe$penv$) indicated by them
+appearing after the colon on the first line. \coqe$forall$ quantifies over
+hypotheses in a constructor; everything before the comma. Compound hypotheses
+are given labels, such as \key{PER}, which is the default name used to
+introduce them into the proof context during theorem proving. Some details
+such as environment uniqueness have been elided, but notice the use of LNCQ
+form within the hypotheses of the rules with binders. These rules exclude a
+finite set of names \coqe$L$ from opening the subprocesses where opening a
+process \coqe$P$ with name \coqe$x$ is denoted by \coqe$open_proc P x$. Bound
+variables are represented using de Bruijn indices and free variables are
+represented using an abstract type, \coqe$atom$, provided by the Metatheory
+library. The rules with binders specify the type of a bound variable in the
+constructor rather than a name. Note that the rules for polymorphism,
+$\exists$ and $\forall$, were not included in the final Coq development since
+GV (\S~\ref{sec:gv}) does not support polymorphism making the rules
+unnecessary for the translation. Further, as noted by \citeauthor{Lee:2012},
+support for polymorphism in type variables creates an explosion of the
+infrastructure requiring additional of opening and substituting definitions
+and lemmas.
 
 Formalising the process calculus CP provided many challenges for the
 Metatheory library since to my knowledge, the library has never been applied
@@ -141,24 +146,25 @@ $\stlc$ one typically does not work up to permutation of binders, whereas in a
 process calculus these kinds of structural equivalences are
 standard. Additionally, substitution and opening are only defined for
 names. In other words, one cannot substitute an arbitrary process term for a
-name, unlike in the $\lambda$-calculus. Thus frameworks which assume
+name, unlike in the $\lambda$-calculus. Thus, frameworks which assume
 $\lambda$-calculi style operations are not immediately amenable to the CP
 setting~\cite{Lee:2012}.
 
 Ordering in environments is ignored so the development required operations for
-handling permutations of environments. The Metatheory library does not
-currently support permutating environments, however some basic lemmas were
-added as a result of this work, and custom tactics were developed to
-automatically solve certain permutation goals via simple proof search. Even
-so, there are still many cases where sequences of primitive lemmas, such as
-those handling append, commutativity and transitivity, need to be applied
-manually. A lot of these cases are similar but there would not appear to be an
-advantage in developing a tactic to do the work. Doing so would create a
-dependency between a hard-to-debug and obscure Ltac definition and the proofs
-which utilise it, becoming a burden to change. Further, such a development
-philosophy treats Ltac tactics akin to macros, a shorthand for expressing an
-oft-repeated sequence of tactics, and it is doubtful much can be gained from
-it unless the execution of Ltac tactics can be made more transparent.
+handling permutations of environments as shown in the \coqe$cp_rule$
+definition. The Metatheory library does not currently support permutating
+environments, however some basic lemmas were added as a result of this work,
+and custom tactics were developed to automatically solve certain permutation
+goals via simple proof search. Even so, there are still many cases where
+sequences of primitive lemmas, such as those handling append, commutativity
+and transitivity, need to be applied manually. A lot of these cases are
+similar but there would not appear to be an advantage in developing a tactic
+to do the work. Doing so would create a dependency between a hard-to-debug and
+obscure Ltac definition and the proofs which utilise it, becoming a burden to
+change. Further, such a development philosophy treats Ltac tactics akin to
+macros, a shorthand for expressing an oft-repeated sequence of tactics, and it
+is doubtful much can be gained from it unless the execution of Ltac tactics
+can be made more transparent.
 
 \subsubsection{Subject Reduction Theorem}
 
@@ -172,44 +178,52 @@ Theorem proc_sub_red:
 Proof. ii; gen $\Gamma$; induction RED; subst; eauto. Qed.
 \end{coq}
 
-\coqe$forall$ quantifies over hypotheses in the statement; everything before
-the comma. \key{WT} and \key{RED} introduce names for the corresponding
-hypotheses. The statement to prove is that if \coqe$P$ is a well-typed process
-in a context $\Gamma$ and \coqe$P$ reduces to \coqe$Q$ then \coqe$Q$ is
-well-typed in $\Gamma$. The proof environment is started using \coqe$Proof.$
-and then followed by a sequence of tactics until all goals have a been
-proven. After execution of \coqe$Qed.$ the Coq system inspects the validity of
-the proof object constructed by the tactics and, if valid, will added the
-theorem to the environment.
+\coqe$Theorem$ or \coqe$Lemma$ indicate the start of a proposition to be
+proved (Coq makes no distinction between the two keywords). The statement to
+prove is that if \coqe$P$ is a well-typed process in a context $\Gamma$ and
+\coqe$P$ reduces to \coqe$Q$ then \coqe$Q$ is well-typed in $\Gamma$. The
+proof environment is started using \coqe$Proof.$ and then followed by a
+sequence of tactics until all goals have been proven. After execution of
+\coqe$Qed.$ the Coq system inspects the validity of the proof object
+constructed by the tactics and, if valid, will add the theorem to the
+environment.
 
-Some tactics used above are shorthands for commonly combined tactics, defined
-using Ltac, a language for defining custom tactics and decision
-procedures. For example, \coqe$ii$ repeatedly performs hypothesis introduction
-then simplification until no more can be peformed, and \coqe$gen$ $\Gamma$
-generalises the following induction over the environment $\Gamma$.
+Some tactics used above are shorthands for commonly combined tactics, for
+example \coqe$ii$ repeatedly performs hypothesis introduction then
+simplification until no more can be peformed, and \coqe$gen$ $\Gamma$
+generalises the goal over the typing environment $\Gamma$.
 
 \input{principalcp}
 
-The last step in the proof \coqe$eauto$ attempts to solve the goals generated
-by the induction using lemmas known to the system. The goals to be proved
-corresponding exactly to lemmas satisfying the reduction relation. The
-reduction rules were complicated to prove due to being composed of multiple
-constructor instances and differ significantly to the standard operational
-semantics one typically deals with in $\lambda$-calculus formalisms. Most
-proofs followed a pattern but it was difficult to automate satisfactorily for
-the similar reasons stated for permutation automation. However, some tasks
-could be delegated to a custom tactic, for example instantiating cofinitely
-quantified hypotheses with a newly introduced fresh variable. An example of a
-principal cut reduction statement in Coq is shown in Figure~\ref{principal}.
-The hypothesis contains explicit de Bruijn 
+The \key{RED} hypothesis refers to an inductive type defining the principal
+cut reductions and commuting conversions on processes. The inductive cases in
+\coqe$proc_sub_red$ were complicated to prove due to the process terms being
+composed of multiple constructor instances, differing significantly from the
+standard operational semantics typically dealt with in $\lambda$-calculus
+formalisms. To mitigate the complexity, the proof for each case was written as
+a separate lemma (termed ``reduction lemmas''). The last step in the proof of
+\coqe$proc_sub_red$, \coqe$eauto$, solves the goals generated by the induction
+using the reduction lemmas.
+
+An example of a reduction lemma is shown in Figure~\ref{fig:principal}. Cut of
+server accept against client request involves three constructor instances, the
+outer cut and the two dual constructors as the subprocesses. As shown, to
+specify this compound process requires the explicit use of de Bruijn
+indices. These indices will be replaced in the proof by a sufficiently fresh
+name after destructing \key{WT} to obtain the derivations for \coqe$P$ and
+\coqe$Q$. Most proofs followed a pattern but it was difficult to automate
+satisfactorily for similar reasons to those stated for automating permutation
+manipulation. However, some tasks were delegated to custom tactics, for
+example instantiating cofinitely quantified hypotheses with a newly introduced
+fresh variable.
 
 Initially, an implicit notion of weakening was chosen so as to be in line with
 \citeauthor{Wadler:2014}'s definitions. However, explicit weakening is
-required to differentiate the principal cut elimination rules for the various
-interactions between servers and clients ($\beta_{!?}$ and $\beta_{!W}$). The
-paper presentation does not specify where weakening could occur; it is tacitly
+required to differentiate the principal cut elimination rules for the
+interactions between servers and clients (spawning and weakening). The paper
+presentation does not specify where weakening could occur; it is tacitly
 assumed weakening can always be pushed further up the derivation tree to a
-base rule e.g. $\Ax\Cut$ rule. Contraction is not supported in the
+base rule e.g. \coqe$cp_fwd$ rule. Contraction is not supported in the
 formalisation due to the difficulty in specifying its principal cut
 elimination rule. In order to specify the rule one requires to show the
 following:
@@ -225,22 +239,23 @@ sufficiently fresh name $y$ and $\key{contract}_{\Gamma} \tm{Q}$ contracts
 $\tm{Q}$ with the names in $\Gamma$.
 
 Unfortunately, the reduction relation does not have knowledge of the
-environment, $\Gamma$, typing process $\tm{P}$. This fact does not impact upon
-expressing weakening because only the names (not the types in the bindings)
-within the environment are required for weakening. Without contraction, this
-version of CP corresponds to affine logic. alms calculus vs gv calculus w/o
-contraction?
+environment, $\Gamma$, typing process $\tm{P}$ because this information is
+only available after the compound cut is destructed, yielding a derivation for
+$\tm{P}$. This fact does not impact upon expressing weakening because only the
+names (not the types in the bindings) within the environment are required for
+weakening.
 
 In the empty choice rule there may only be a single binding in the context
 (cf. an arbitrary context in \citeauthor{Wadler:2014}'s
-presentation~\cite{Wadler:2014}). While this diverges with the presentation of
-linear logic it became necessary to do this because otherwise there would be
-no relationship between the free variables within a process and its
-environment. no there is a clear iff relationship which permits reduction
-rules to apply such as i think weakening but it should be any rule which takes
-some fvs of proc and infers something about environments from that...otherwise
-what it is not at all clear how to encode the reductions in a relation, the
-subprocesses environments are created from destructing the environment
+presentation~\cite{Wadler:2014}). \todo{look into a fix for the empty choice
+  rule} While this diverges with the presentation of linear logic it became
+necessary to do this because otherwise there would be no relationship between
+the free variables within a process and its environment. no there is a clear
+iff relationship which permits reduction rules to apply such as i think
+weakening but it should be any rule which takes some fvs of proc and infers
+something about environments from that...otherwise what it is not at all clear
+how to encode the reductions in a relation, the subprocesses environments are
+created from destructing the environment
 
 % ...commuting conversions
 
@@ -276,23 +291,31 @@ is automatic by appeal to the proved well-typed reductions.
 
 % ... cut elimination ....
 
-more elaborate than first thought. complicated measure.  as it stands the
-current definitions of well-typed terms and reduction are not amenable to the
-proving of the cut elimination theorem. some method of measure is necessary in
-order to develop some notion of termination and also some relationship to the
-the the underlying subprocesses additionally there is also the issue of the
-representation which includes cases that are not immediately clear how to
-prove for instance the commuting conversions are one such example the
-reduction is only defined if the logical operator corresponds to a free
-variable but induction on the typing judgement leads to two cases one where
-the logical operator is applied to the top-level cut variable it is not
-immediately clear how to eliminate this from happening a relationship between
-the two subprocesses of the cut would need to be stated to prevent them from
-differing so that a principal cut reduction rule may be applied yes only then
-may the the rule be reduced to a cut-free thing if we had a relationship
-between them then there would be some kind of thing that would allow
-destruction on one then fixing the other in the case of a bvar equal to zero
-\todo{how to proceed?}
+\subsubsection{Top-level Cut Elimination}
+
+The theorem for top-level cut elimination can be expressed as:
+\begin{coq}
+Theorem proc_cut_elim:
+  forall P $\Gamma$
+         (WT: P $\tpcp$ $\Gamma$),
+    exists Q, P $\becomes^\star$ Q /\ $\sim$ is_cut Q.
+\end{coq}
+
+where $\becomes^\star$ denotes the reflexive and transitive closure of
+$\becomes$ and $\sim$ \coqe$is_cut Q$ expresses that Q is not a cut.
+
+Unfortunately, the theorem has eluded attempts at mechanised proof so far. The
+hypothesis of a well-typed process \coqe$P$ is not sufficient to prove the
+theorem. For instance, the \coqe$cp_cut$ constructor does not ensure that
+there is a duality relationship between the subprocesses. Following informal
+proofs, it is likely to require a termination measure involving the length of
+the derivation is needed. Additionally, the locally nameless representation
+creates subgoals for which it is not clear how to prove. For instance, a
+commuting conversion is only defined if the logical operator corresponds to a
+free variable but induction on \key{WT} yields two cases one of which applies
+the logical operator to the top-level cut variable. Since there is no
+relationship between the subprocesses, in general it will not be possible to
+apply a principal cut rule.
 
 \subsection{The functional language GV}\label{sec:gv}
 
